--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div id="main">
         <div id="page1">
-            <h1>CoffeeHub<br>Relive Coffee</h1>
+            <h1>CoffeeHub</h1><h1>Relive Coffee</h1>
             <div id="img-container">
-                <div id="visit"><a href="#">Contact</a></div>
+                <div id="visit"><a href="#">Our Menu</a></div>
                 <img src=" https://images.unsplash.com/photo-1559305616-3f99cd43e353?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
                 " alt="">
             </div>
