6th innitial commit

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       </div>
     </div>
     <div id="page2">
-      <div id="elem1" class="elem"><img
+      <div id="elem1" class="elem"><img data-scroll data-scroll-speed="1" 
           src="https://images.unsplash.com/photo-1698914223459-829aace0f5a7?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt=""></div>
-      <div id="elem2" class="elem"><img
+      <div id="elem2" class="elem"><img data-scroll data-scroll-speed="1" 
           src="https://images.unsplash.com/photo-1574033566548-f6c3f48cc11e?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt=""></div>
-      <div id="elem3" class="elem"><img
+      <div id="elem3" class="elem"><img data-scroll data-scroll-speed="1" 
           src="https://images.unsplash.com/photo-1511081692775-05d0f180a065?q=80&w=1886&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt=""></div>
     </div>
