12th initial commit

--- a/index.html
+++ b/index.html
@@ -7,10 +7,33 @@
   <title>Coffee Hubb</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
   <link rel="stylesheet" href="style.css" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
+    rel="stylesheet"/>
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
   <link rel="stylesheet" href="mediaqueries.css" />
 </head>
 
 <body>
+  <div id="nav">
+    <h1>Coffe<br>Hubb</h1>
+    <div id="nav-mid">
+      <div id="links">
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Menu</a>
+        <a href="">Reviews</a>
+        <a href="">Event</a>
+      </div>
+      <div id="icons">
+        <i class="ri-menu-2-fill"></i>
+        <i class="ri-book-read-fill"></i>
+      </div>
+    </div>
+  </div>
   <div id="main">
     <div id="page1">
       <h1>CoffeeHub</h1>
