13th innitial commit

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
 <body>
   <div id="nav">
-    <h1>Coffe<br>Hubb</h1>
+    <div id="nav-left">
+      <h1>Coffee<br>Hub</h1>
+      <h1>Relive<br>Coffee</h1>
+    </div>
     <div id="nav-mid">
       <div id="links">
         <a href="">Home</a>
