14th innitial commit

--- a/index.html
+++ b/index.html
@@ -32,10 +32,20 @@
         <a href="">Event</a>
       </div>
       <div id="icons">
-        <i class="ri-menu-2-fill"></i>
+        <i id="menuicon" class="ri-menu-2-fill"></i>
         <i class="ri-book-read-fill"></i>
       </div>
     </div>
+  </div>
+  <div id="nav-top">
+    <div id="navlinks">
+      <a href="">Home</a>
+      <a href="">About</a>
+      <a href="">Menu</a>
+      <a href="">Reviews</a>
+      <a href="">Event</a>
+    </div>
+    <i id="closeIcon" class="ri-close-fill"></i>
   </div>
   <div id="main">
     <div id="page1">
