15th Innitial Commit

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+  
+
   <div id="nav">
     <div id="nav-left">
       <h1>Coffee<br>Hub</h1>
@@ -37,16 +39,30 @@
       </div>
     </div>
   </div>
-  <div id="nav-top">
-    <div id="navlinks">
-      <a href="">Home</a>
-      <a href="">About</a>
-      <a href="">Menu</a>
-      <a href="">Reviews</a>
-      <a href="">Event</a>
+  <div class="menu-overlay">
+
+    <div class="menu-cols">
+        <div class="col"></div>
+        <div class="col">
+            <div class="menu-link">
+                <a href="">Home</a>
+            </div>
+            <div class="menu-link">
+                <a href="">About</a>
+            </div>
+            <div class="menu-link">
+                <a href="">Menu</a>
+            </div>
+            <div class="menu-link">
+                <a href="">Reviews</a>
+            </div>
+            <div class="menu-link">
+              <a href="">Events</a>
+          </div>
+                <div class="menu-close-btn">Close</div>
+        </div>
     </div>
-    <i id="closeIcon" class="ri-close-fill"></i>
-  </div>
+</div>
   <div id="main">
     <div id="page1">
       <h1>CoffeeHub</h1>
