--- a/index.html
+++ b/index.html
@@ -7,18 +7,13 @@
   <title>Coffee Hubb</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
   <link rel="stylesheet" href="style.css" />
-  <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
-    rel="stylesheet"/>
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="mediaqueries.css" />
 </head>
 
 <body>
-  
+
 
   <div id="nav">
     <div id="nav-left">
@@ -42,27 +37,27 @@
   <div class="menu-overlay">
 
     <div class="menu-cols">
-        <div class="col"></div>
-        <div class="col">
-            <div class="menu-link">
-                <a href="">Home</a>
-            </div>
-            <div class="menu-link">
-                <a href="">About</a>
-            </div>
-            <div class="menu-link">
-                <a href="">Menu</a>
-            </div>
-            <div class="menu-link">
-                <a href="">Reviews</a>
-            </div>
-            <div class="menu-link">
-              <a href="">Events</a>
-          </div>
-                <div class="menu-close-btn">Close</div>
+      <div class="col"></div>
+      <div class="col">
+        <div class="menu-link">
+          <a href="">Home</a>
         </div>
+        <div class="menu-link">
+          <a href="">About</a>
+        </div>
+        <div class="menu-link">
+          <a href="">Menu</a>
+        </div>
+        <div class="menu-link">
+          <a href="">Reviews</a>
+        </div>
+        <div class="menu-link">
+          <a href="">Events</a>
+        </div>
+        <div class="menu-close-btn">Close</div>
+      </div>
     </div>
-</div>
+  </div>
   <div id="main">
     <div id="page1">
       <h1>CoffeeHub</h1>
@@ -74,27 +69,47 @@
       </div>
     </div>
     <div id="page2">
-      <div id="elem1" class="elem"><img data-scroll data-scroll-speed="1" 
+      <div id="elem1" class="elem"><img data-scroll data-scroll-speed="1"
           src="https://images.unsplash.com/photo-1698914223459-829aace0f5a7?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="">
-          <div data-scroll data-scroll-speed="-2"  class="buts"></div>
-        </div>
-      <div id="elem2" class="elem"><img data-scroll data-scroll-speed="1" 
+        <div data-scroll data-scroll-speed="-2" class="buts"></div>
+      </div>
+      <div id="elem2" class="elem"><img data-scroll data-scroll-speed="1"
           src="https://images.unsplash.com/photo-1574033566548-f6c3f48cc11e?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="">
-          <div data-scroll data-scroll-speed="-2"  class="buts"></div>
-        </div>
-      <div id="elem3" class="elem"><img data-scroll data-scroll-speed="1" 
+        <div data-scroll data-scroll-speed="-2" class="buts"></div>
+      </div>
+      <div id="elem3" class="elem"><img data-scroll data-scroll-speed="1"
           src="https://images.unsplash.com/photo-1511081692775-05d0f180a065?q=80&w=1886&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="">
-          <div data-scroll data-scroll-speed="-2"  class="buts"></div>
-        </div>
+        <div data-scroll data-scroll-speed="-2" class="buts"></div>
+      </div>
+    </div>
+    <div id="main-desc">
+      <div id="left-desc">
+        <h2>We brew Potential and Confidence in our Coffee, so that people can Believe in themselves again.</h2>
+      </div>
+      <div id="right-desc">
+        <p>At CoffeeHubb, we're passionate about more than just coffee; we're dedicated to fostering self-belief. With
+          every sip, we aim to inspire confidence, helping you rediscover your untapped potential and strength.</p>
+        <p>Our mission goes beyond brewing exceptional coffee. CoffeeHubb is a haven where every cup is a catalyst for
+          empowerment, encouraging you to embrace your unique journey and savor the richness of life with renewed
+          self-belief.</p>
+      </div>
     </div>
     <div id="page3">
-      <div class="child" id="child1"><img src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
-      <div class="child" id="child2"><img src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
-      <div class="child" id="child3"><img src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
-      <div class="child" id="child4"><img src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
+      <div class="child" id="child1"><img
+          src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt=""></div>
+      <div class="child" id="child2"><img
+          src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt=""></div>
+      <div class="child" id="child3"><img
+          src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt=""></div>
+      <div class="child" id="child4"><img
+          src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt=""></div>
     </div>
   </div>
 
