--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
                 " alt="">
       </div>
     </div>
+    <div id="gallery"><h1>Gallery</h1></div>
     <div id="page2">
       <div id="elem1" class="elem"><img data-scroll data-scroll-speed="1"
           src="https://images.unsplash.com/photo-1698914223459-829aace0f5a7?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="">
-        <div data-scroll data-scroll-speed="-2" class="buts"></div>
+
       </div>
       <div id="elem2" class="elem"><img data-scroll data-scroll-speed="1"
           src="https://images.unsplash.com/photo-1574033566548-f6c3f48cc11e?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="">
-        <div data-scroll data-scroll-speed="-2" class="buts"></div>
+
       </div>
       <div id="elem3" class="elem"><img data-scroll data-scroll-speed="1"
           src="https://images.unsplash.com/photo-1511081692775-05d0f180a065?q=80&w=1886&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="">
-        <div data-scroll data-scroll-speed="-2" class="buts"></div>
       </div>
     </div>
     <div id="main-desc">
@@ -98,19 +98,36 @@
       </div>
     </div>
     <div id="page3">
+      <h1 id="menu">Our Popular Items</h1>
+      <div id="child-container">
       <div class="child" id="child1"><img
           src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt=""></div>
+          alt="">
+          <h1>Cappucino</h1>
+          <h3>Rs 180</h3>
+        </div>
       <div class="child" id="child2"><img
-          src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt=""></div>
+          src="https://images.unsplash.com/photo-1567123498814-e333c1aaa793?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="">
+          <h1>Brew Coffee</h1>
+          <h3>Rs 140</h3>
+        </div>
       <div class="child" id="child3"><img
-          src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt=""></div>
+          src="https://images.unsplash.com/photo-1599659236990-34cc97c7e363?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGFtZXJpY2Fub3xlbnwwfHwwfHx8MA%3D%3D"
+          alt="">
+          <h1>Americano</h1>
+          <h3>Rs 140</h3>
+        </div>
       <div class="child" id="child4"><img
-          src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt=""></div>
+          src="https://plus.unsplash.com/premium_photo-1668565018825-7151bb05428b?q=80&w=2004&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="">
+          <h1>Meowucino</h1>
+          <h3>Rs 240</h3>
+        </div>
     </div>
+    <a href="#">See Complete Menu</a>
+  </div>
+
   </div>
 
 
