--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
     <div id="nav-mid">
       <div id="links">
-        <a href="">Home</a>
-        <a href="">About</a>
+        <a href="#">Home</a>
+        <a href="#">About</a>
         <a href="">Menu</a>
         <a href="">Reviews</a>
         <a href="">Event</a>
@@ -77,12 +77,12 @@
 
       </div>
       <div id="elem2" class="elem"><img data-scroll data-scroll-speed="1"
-          src="https://images.unsplash.com/photo-1574033566548-f6c3f48cc11e?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          src="https://images.unsplash.com/photo-1554118811-1e0d58224f24?q=80&w=2047&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="">
 
       </div>
       <div id="elem3" class="elem"><img data-scroll data-scroll-speed="1"
-          src="https://images.unsplash.com/photo-1511081692775-05d0f180a065?q=80&w=1886&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          src="https://images.unsplash.com/photo-1514933651103-005eec06c04b?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="">
       </div>
     </div>
