--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Coffee Hubb</title>
-  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet" />
@@ -69,7 +69,9 @@
                 " alt="">
       </div>
     </div>
-    <div id="gallery"><h1>Gallery</h1></div>
+    <div id="gallery">
+      <h1>Gallery</h1>
+    </div>
     <div id="page2">
       <div id="elem1" class="elem"><img data-scroll data-scroll-speed="1"
           src="https://images.unsplash.com/photo-1521017432531-fbd92d768814?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -101,50 +103,101 @@
     <div id="page3">
       <h1 id="menu">Our Popular Items</h1>
       <div id="child-container">
-      <div class="child" id="child1"><img
-          src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="">
+        <div class="child" id="child1"><img
+            src="https://images.unsplash.com/photo-1611564494260-6f21b80af7ea?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="">
           <h1>Cappucino</h1>
           <h3>Rs 180</h3>
           <button>Order</button>
         </div>
-      <div class="child" id="child2"><img
-          src="https://images.unsplash.com/photo-1567123498814-e333c1aaa793?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="">
+        <div class="child" id="child2"><img
+            src="https://images.unsplash.com/photo-1567123498814-e333c1aaa793?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="">
           <h1>Brew Coffee</h1>
           <h3>Rs 140</h3>
           <button>Order</button>
 
         </div>
-      <div class="child" id="child3"><img
-          src="https://images.unsplash.com/photo-1599659236990-34cc97c7e363?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGFtZXJpY2Fub3xlbnwwfHwwfHx8MA%3D%3D"
-          alt="">
+        <div class="child" id="child3"><img
+            src="https://images.unsplash.com/photo-1599659236990-34cc97c7e363?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGFtZXJpY2Fub3xlbnwwfHwwfHx8MA%3D%3D"
+            alt="">
           <h1>Americano</h1>
           <h3>Rs 140</h3>
           <button>Order</button>
 
         </div>
-      <div class="child" id="child4"><img
-          src="https://plus.unsplash.com/premium_photo-1668565018825-7151bb05428b?q=80&w=2004&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="">
+        <div class="child" id="child4"><img
+            src="https://plus.unsplash.com/premium_photo-1668565018825-7151bb05428b?q=80&w=2004&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="">
           <h1>Meowucino</h1>
           <h3>Rs 240</h3>
           <button>Order</button>
 
         </div>
+      </div>
+      <a href="#">See Complete Menu</a>
     </div>
-    <a href="#">See Complete Menu</a>
-  </div>
-  <div id="page4">
-    <div id="gallery"><h1>Reviews</h1></div>
-  </div>
-  </div>
+    <div id="page4">
+      <div id="gallery">
+        <h1>Reviews</h1>
+      </div>
+      <div id="reviews">
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <h1>"CoffeeHubb is my soulful start each day. The blend is pure magic, instilling confidence with every
+                sip. It's more than coffee; it's my daily reminder of inner strength."</h1>
+              <h3>-Arun Kumar</h3>
+            </div>
 
+            <div class="swiper-slide">
+              <h1>"CoffeeHubb is my daily ritual. The rich flavor and comforting warmth evoke a sense of self-belief.
+                Each cup is a journey to rediscover my potential. Absolutely love it!"</h1>
+              <h3>-Priya Patel</h3>
+            </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"></script>
-  <script src="script.js"></script>
+            <div class="swiper-slide">
+              <h1>"Exceptional coffee! CoffeeHubb is more than a beverage; it's a catalyst for self-discovery. The blend
+                is perfection, and each cup feels like a moment of empowerment. Highly recommended."</h1>
+              <h3>-Raj Gupta</h3>
+            </div>
+
+            <div class="swiper-slide">
+              <h1>"Savoring every moment with CoffeeHubb! The taste is divine, and the uplifting notes make it more than
+                just coffee. A daily companion that boosts my confidence. Truly special!"</h1>
+              <h3>-Ananya Singh</h3>
+            </div>
+
+            <div class="swiper-slide">
+              <h1>"CoffeeHubb is my go-to for a powerful start. The blend is invigorating, and the rich aroma sets a
+                positive tone. It's more than a brew; it's a journey to self-belief."</h1>
+              <h3>-Vikram Sharma</h3>
+            </div>
+
+            <div class="swiper-slide">
+              <h1>"CoffeeHubb is my daily dose of inspiration. The unique blend and comforting warmth make it an
+                essential part of my routine. A delightful experience that fuels my self-belief."</h1>
+              <h3>-Kavya Desai</h3>
+            </div>
+
+            <div class="swiper-slide">
+              <h1>"Rediscovering joy with CoffeeHubb! The flavor is exquisite, and each cup feels like a moment of
+                self-revelation. It's more than just coffee; it's a celebration of my potential."</h1>
+              <h3>-Sandeep Patel</h3>
+            </div>
+
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
