--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </div>
     <div id="nav-mid">
       <div id="links">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="">Menu</a>
-        <a href="">Reviews</a>
+        <a href="#page1">Home</a>
+        <a href="#main-desc">About</a>
+        <a href="#page3">Menu</a>
+        <a href="#age4">Reviews</a>
         <a href="">Event</a>
       </div>
       <div id="icons">
@@ -41,16 +41,16 @@
       <div class="col"></div>
       <div class="col">
         <div class="menu-link">
-          <a href="">Home</a>
+          <a href="#page1">Home</a>
         </div>
         <div class="menu-link">
-          <a href="">About</a>
+          <a href="#main-desc">About</a>
         </div>
         <div class="menu-link">
-          <a href="">Menu</a>
+          <a href="#page3">Menu</a>
         </div>
         <div class="menu-link">
-          <a href="">Reviews</a>
+          <a href="#page4">Reviews</a>
         </div>
         <div class="menu-link">
           <a href="">Events</a>
